Qualification category font and alignment fix

--- a/styles/qualification.module.css
+++ b/styles/qualification.module.css
@@ -26,7 +26,12 @@
   color: var(--title-color);
   padding: var(--mb-0-75);
   transition: var(--transition-time) var(--ease-out-quart);
+  
+  text-align: center;
 }
+
+
+
 
 .button:hover {
   color: var(--first-color);
